# python-project-52

./: Makefile  README.md  flake8.ini  pyproject.toml  render.yaml  requirements.txt  setup.cfg
labels/migrations/: 0003_remove_label_tasks.py
labels/templates/labels/: label_form.html  label_list.html
locale/ru/LC_MESSAGES/: django.mo
statuses/: views.py
statuses/templates/statuses/: status_confirm_delete.html  (+2 more)
task_manager/: README.md  asgi.py  mixins.py  pyproject.toml  render.yaml  requirements.txt  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_created_at.py
task_manager/labels/templates/labels/: label_confirm_delete.html
task_manager/locale/ru/LC_MESSAGES/: django.po
task_manager/statuses/: forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py
task_manager/statuses/templates/statuses/: status_list.html
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/tasks/templates/tasks/: task_list.html
task_manager/templates/: index.html
task_manager/tests/: tasks_tests.py  test_labels.py  test_statuses.py  tests.py
task_manager/users/: tests.py  urls.py  views.py
task_manager/users/templates/users/: user_form.html  user_list.html
tasks/: views.py
templates/: index.html
templates/registration/: login.html
users/: forms.py
(+5 files in other folders)
